@@ -1,3 +1,11 @@
+Tue Jan 26 15:14:01 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* compile.c (iseq_peephole_optimize): don't apply tailcall
+	  optimization to send/invokesuper instructions with blockiseq.
+	  This is a follow-up to the changes in r51903; blockiseq is now
+	  the third operand of send/invokesuper instructions.
+	  [ruby-core:73413] [Bug #12018]
+
 Tue Jan 26 14:26:46 2016  Eric Wong  <e@80x24.org>
 
 	* signal.c (sig_list): use fstring for hash key
